--- a/public/history.html
+++ b/public/history.html
@@ -184,50 +184,28 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@1.1.0"></script>
 <script>
-    // API 기본 URL
     const API_BASE = "http://localhost:8080/api";
 
-    // 센서 목록 및 차트 인스턴스 저장용
     let sensors = [];
     let myChart = null;
+    let unitMap = {};
+    let sensorUnitMap = {};
 
-    // unitId 에 따른 단위명 매핑
-    const unitMap = {
-        1: "℃",
-        2: "%",
-        3: "ppm",
-        // 필요한 단위 추가
-    };
-
-    // 페이지 로드 시 센서 목록 가져오기
     window.onload = () => {
         fetchSensors();
         initDateInputs();
         document.getElementById("loadChartBtn").addEventListener("click", onLoadChartClick);
     };
 
-    function groupSensorsByUnit(sensorIds) {
-    // sensorIds 배열에 해당하는 센서들을 unitId별로 그룹화
-    const grouped = {};
-    sensorIds.forEach(id => {
-        const sensor = sensors.find(s => s.sensorId === id);
-        if (!sensor) return;
-        if (!grouped[sensor.unitId]) {
-            grouped[sensor.unitId] = [];
-        }
-        grouped[sensor.unitId].push(sensor.sensorId);
-    });
-    return grouped;
-}
-
-    // 센서 목록 API 호출
+    // 1. 센서 목록 가져오기
     function fetchSensors() {
         fetch(`${API_BASE}/sensors`)
             .then(res => res.json())
             .then(data => {
-                sensors = data; // SensorResponseDTO 배열 가정
-                renderSensorOptions();
+                sensors = data;
+                fetchHistory(); // 센서 목록 받은 뒤 기본 히스토리 호출
             })
             .catch(err => {
                 console.error("센서 목록 불러오기 실패:", err);
@@ -235,198 +213,150 @@
             });
     }
 
-    // 셀렉트 박스에 센서 옵션 렌더링
+    // 2. 초기 히스토리 데이터 요청
+    function fetchHistory() {
+        const selectedIds = sensors.map(s => s.sensorId);
+        const today = new Date().toISOString().slice(0, 10);
+        const requestBody = buildHistoryRequest(selectedIds, today, today);
+
+        fetch(`${API_BASE}/history`, {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(requestBody)
+        })
+        .then(res => res.json())
+        .then(data => {
+            parseUnitData(data);
+            renderSensorOptions();
+        })
+        .catch(err => {
+            console.error("히스토리 데이터 불러오기 실패:", err);
+            alert("히스토리 데이터를 불러오는 데 실패했습니다.");
+        });
+    }
+
+    // 3. 유닛 정보 파싱
+    function parseUnitData(historyData) {
+        unitMap = {};
+        sensorUnitMap = {};
+
+        historyData.y.forEach(unitInfo => {
+            unitMap[unitInfo.unitId] = unitInfo.name;
+        });
+
+        for (const group of historyData.data) {
+            for (const sensorValue of group.values) {
+                sensorUnitMap[sensorValue.sensorId] = sensorValue.unitId;
+            }
+        }
+    }
+
+    // 4. 센서 옵션 렌더링
     function renderSensorOptions() {
         const select = document.getElementById("sensor-select");
+        if (!select) return;
+
         select.innerHTML = "";
+
         sensors.forEach(sensor => {
             const option = document.createElement("option");
             option.value = sensor.sensorId;
-            const unitName = unitMap[sensor.unitId] || "단위없음";
+
+            const unitId = sensorUnitMap[sensor.sensorId] || sensor.unitId;
+            const unitName = unitMap[unitId] || "단위없음";
+
             option.text = `${sensor.name} (${unitName})`;
             select.appendChild(option);
         });
     }
 
-    // 선택된 센서 아이디 배열 가져오기
-    function getSelectedSensorIds() {
-        const select = document.getElementById("sensor-select");
-        return Array.from(select.selectedOptions).map(opt => Number(opt.value));
-    }
-
-    // 선택된 센서 유효성 검사
-    function validateSelection(selectedIds) {
-        if (selectedIds.length === 0) {
-            alert("하나 이상의 센서를 선택해주세요.");
-            return false;
-        }
-        const selectedSensors = sensors.filter(s => selectedIds.includes(s.sensorId));
-        const uniqueUnits = [...new Set(selectedSensors.map(s => s.unitId))];
-        if (uniqueUnits.length > 2) {
-            alert("서로 다른 단위의 센서는 2개까지만 선택 가능합니다.");
-            return false;
-        }
-        return true;
-    }
-
-    // 날짜 input 기본값 세팅 (오늘 날짜)
+    // 5. 날짜 입력 기본값 세팅
     function initDateInputs() {
         const today = new Date().toISOString().slice(0, 10);
         document.getElementById("startDate").value = today;
         document.getElementById("endDate").value = today;
     }
 
-    // 차트 데이터 조회 후 렌더링
-    function loadChartData(sensorIds, startDate, endDate) {
-    const yGroups = groupSensorsByUnit(sensorIds);
+    // 6. 히스토리 요청 바디 구성
+    function buildHistoryRequest(sensorIds, startDate, endDate) {
+        const grouped = {};
 
-    // yGroups 객체를 DTO 배열 형태로 변환
-    const yGroupsArray = Object.entries(yGroups).map(([unitId, sensorIds]) => ({
-        unitId: Number(unitId),
-        sensorIds: sensorIds
-    }));
-
-    const requestBody = {
-        startDate: startDate,
-        endDate: endDate,
-        unit: "daily",
-        y: yGroupsArray
-    };
-
-    fetch(`${API_BASE}/history`, {
-        method: 'POST',
-        headers: {
-            'Content-Type': 'application/json',
-        },
-        body: JSON.stringify(requestBody)
-    })
-    .then(response => {
-        if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
-        return response.json();
-    })
-    .then(data => {
-        renderChartDataFromResponse(data);
-    })
-    .catch(err => {
-        console.error("차트 데이터 불러오기 실패:", err);
-        alert("차트 데이터를 불러오는 데 실패했습니다.");
-    });
-
-    fetch(`${API_BASE}/history`, {
-        method: 'POST',
-        headers: {
-            'Content-Type': 'application/json',
-        },
-        body: JSON.stringify(requestBody)
-    })
-    .then(response => {
-        if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
-        return response.json();
-    })
-    .then(data => {
-        // TODO: data가 HistoryResponseDTO 형태임을 감안해서 적절히 파싱 후 차트 렌더링
-        renderChartDataFromResponse(data);
-    })
-    .catch(err => {
-        console.error("차트 데이터 불러오기 실패:", err);
-        alert("차트 데이터를 불러오는 데 실패했습니다.");
-    });
-}
-
-        // API 호출 예시 (GET 쿼리 파라미터 혹은 POST 방식에 맞게 조정 필요)
-        fetch('http://localhost:8080/api/history', {
-  method: 'POST',
-  headers: {
-    'Content-Type': 'application/json',
-  },
-  body: JSON.stringify({
-    sensorIds: [28],
-    start: '2025-08-25',
-    end: '2025-09-25'
-  })
-})
-.then(response => response.json())
-.then(data => {
-  // 처리
-})
-.catch(err => console.error(err));
-
-    // 차트 렌더링 함수
-    function renderChart(data, sensorIds) {
-        // 데이터 구조 예시: [{deviceSerial, sensorId, name, value, unitId, referenceValue, timestamp}, ...]
-        // 타임스탬프 기준으로 라벨 만들기 (중복 제거)
-        const timestamps = [...new Set(data.map(d => d.timestamp))].sort();
-
-        // 각 센서별 데이터 배열 생성
-        const datasets = sensorIds.map((id, idx) => {
+        sensorIds.forEach(id => {
             const sensor = sensors.find(s => s.sensorId === id);
-            const unitName = unitMap[sensor.unitId] || "";
-            const sensorData = timestamps.map(time => {
-                const record = data.find(d => d.sensorId === id && d.timestamp === time);
-                return record ? record.value : null;
-            });
-            const colors = ['#FF6384', '#36A2EB', '#FFCE56', '#4BC0C0', '#9966FF'];
-
-            return {
-                label: `${sensor.name} (${unitName})`,
-                data: sensorData,
-                fill: true,
-                borderColor: colors[idx % colors.length],
-                backgroundColor: colors[idx % colors.length] + "66", // 투명도 추가
-                spanGaps: true,
-            };
+            if (!sensor) return;
+            if (!grouped[sensor.unitId]) {
+                grouped[sensor.unitId] = [];
+            }
+            grouped[sensor.unitId].push(sensor.sensorId);
         });
 
-        const ctx = document.getElementById("myAreaChart").getContext("2d");
-        if (myChart) {
-            myChart.destroy();
+        const y = Object.entries(grouped).map(([unitId, sensorIds]) => ({
+            unitId: parseInt(unitId),
+            sensorIds
+        }));
+
+        return {
+            startDate,
+            endDate,
+            unit: "DAILY",
+            y
+        };
+    }
+
+    // 7. 선택된 센서 ID 가져오기
+    function getSelectedSensorIds() {
+        const select = document.getElementById("sensor-select");
+        return Array.from(select.selectedOptions).map(opt => Number(opt.value));
+    }
+
+    // 8. 선택 유효성 검사
+    function validateSelection(sensorIds) {
+        if (sensorIds.length === 0) {
+            alert("센서를 하나 이상 선택해주세요.");
+            return false;
         }
-        myChart = new Chart(ctx, {
-            type: "line",
-            data: {
-                labels: timestamps,
-                datasets: datasets
-            },
-            options: {
-                responsive: true,
-                plugins: {
-                    legend: {
-                        position: "top",
-                    },
-                    tooltip: {
-                        mode: "index",
-                        intersect: false,
-                    }
-                },
-                interaction: {
-                    mode: "nearest",
-                    axis: "x",
-                    intersect: false
-                },
-                scales: {
-                    x: {
-                        display: true,
-                        title: {
-                            display: true,
-                            text: "시간"
-                        }
-                    },
-                    y: {
-                        display: true,
-                        title: {
-                            display: true,
-                            text: "값"
-                        }
-                    }
-                }
-            }
+
+        const selectedUnits = new Set(
+            sensorIds.map(id => {
+                const sensor = sensors.find(s => s.sensorId === id);
+                return sensor ? sensor.unitId : null;
+            })
+        );
+
+        if (selectedUnits.size > 2) {
+            alert("서로 다른 단위의 센서는 2개까지만 선택 가능합니다.");
+            return false;
+        }
+
+        return true;
+    }
+
+    // 9. 차트 데이터 불러오기
+    function loadChartData(sensorIds, startDate, endDate) {
+        const requestBody = buildHistoryRequest(sensorIds, startDate, endDate);
+
+        fetch(`${API_BASE}/history`, {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(requestBody)
+        })
+        .then(res => {
+            if (!res.ok) throw new Error(`HTTP error: ${res.status}`);
+            return res.json();
+        })
+        .then(data => {
+            renderChartDataFromResponse(data);
+        })
+        .catch(err => {
+            console.error("차트 데이터 불러오기 실패:", err);
+            alert("차트 데이터를 불러오는 데 실패했습니다.");
         });
     }
 
-    // 차트 불러오기 버튼 클릭 핸들러
+    // 10. 버튼 클릭 시 차트 로딩
     function onLoadChartClick() {
-        const selectedIds = getSelectedSensorIds();
-        if (!validateSelection(selectedIds)) return;
+        const sensorIds = getSelectedSensorIds();
+        if (!validateSelection(sensorIds)) return;
 
         const startDate = document.getElementById("startDate").value;
         const endDate = document.getElementById("endDate").value;
@@ -436,73 +366,57 @@
             return;
         }
 
-        loadChartData(selectedIds, startDate, endDate);
+        loadChartData(sensorIds, startDate, endDate);
     }
 
-    // 기간 설정 함수 (일간, 주간, 월간, 연간)
-    function setRange(range) {
-        const end = new Date();
-        let start = new Date();
+    // 11. 차트 데이터 렌더링
+function renderChartDataFromResponse(response) {
+    const unitMapLocal = {};
+    response.y.forEach(unitInfo => {
+        unitMapLocal[unitInfo.unitId] = unitInfo.name;
+    });
 
-        switch (range) {
-            case "daily":
-                // 오늘 하루
-                break;
-            case "week":
-                start.setDate(end.getDate() - 7);
-                break;
-            case "month":
-                start.setMonth(end.getMonth() - 1);
-                break;
-            case "year":
-                start.setFullYear(end.getFullYear() - 1);
-                break;
-            default:
-                return;
-        }
+    const timestamps = response.data.map(d => d.timestamp).sort();
 
-        document.getElementById("startDate").value = start.toISOString().slice(0, 10);
-        document.getElementById("endDate").value = end.toISOString().slice(0, 10);
-    }
-
-    // 사용자 지정 기간 적용 버튼
-    function setCustomRange() {
-        onLoadChartClick();
-    }
-
-    function renderChartDataFromResponse(response) {
-    // response.y는 UnitInfo 배열
-    // response.data는 TimestampGroup 배열
-
-    // 타임스탬프 배열 생성 (정렬)
-    const timestamps = response.data.map(g => g.timestamp).sort();
-
-    // unitId별 센서별 값 map 만들기 (sensorId -> [values])
     const sensorDataMap = {};
+    const referenceValueMap = {};  // sensorId별 기준값 저장용
 
     response.data.forEach(group => {
-        group.values.forEach(value => {
-            if (!sensorDataMap[value.sensorId]) {
-                sensorDataMap[value.sensorId] = [];
+        group.values.forEach(v => {
+            if (!sensorDataMap[v.sensorId]) {
+                sensorDataMap[v.sensorId] = [];
             }
-            sensorDataMap[value.sensorId].push({ timestamp: group.timestamp, value: value.value });
+            sensorDataMap[v.sensorId].push({ timestamp: group.timestamp, value: v.value });
+
+            // 기준값 저장 (동일 센서 기준값이 여러면 나중 값 덮어씀)
+            referenceValueMap[v.sensorId] = v.referenceValue || 0;
         });
     });
 
-    // 선택된 센서 Id 목록
-    const sensorIds = Object.keys(sensorDataMap).map(id => Number(id));
+    const sensorIds = Object.keys(sensorDataMap).map(Number);
 
-    // Chart.js용 데이터셋 구성
+    // 단위별로 Y축을 나누기 위한 매핑
+    const unitIds = Array.from(new Set(sensorIds.map(id => {
+        const sensor = sensors.find(s => s.sensorId === id);
+        return sensor?.unitId;
+    })));
+
+    const axisMap = {};
+    if (unitIds.length > 0) axisMap[unitIds[0]] = "y1";
+    if (unitIds.length > 1) axisMap[unitIds[1]] = "y2";
+
+    const colors = ['#FF6384', '#36A2EB', '#FFCE56', '#4BC0C0', '#9966FF'];
+
+    // 센서 실제 데이터 시리즈
     const datasets = sensorIds.map((id, idx) => {
         const sensor = sensors.find(s => s.sensorId === id);
-        const unitName = unitMap[sensor?.unitId] || "";
-        // 타임스탬프 기준으로 값 매칭 (null은 결측치)
-        const dataPoints = timestamps.map(t => {
-            const record = sensorDataMap[id].find(r => r.timestamp === t);
-            return record ? record.value : null;
-        });
+        const unitId = sensor?.unitId;
+        const unitName = unitMapLocal[unitId] || "단위없음";
 
-        const colors = ['#FF6384', '#36A2EB', '#FFCE56', '#4BC0C0', '#9966FF'];
+        const dataPoints = timestamps.map(t => {
+            const match = sensorDataMap[id].find(dp => dp.timestamp === t);
+            return match ? match.value : null;
+        });
 
         return {
             label: `${sensor?.name || 'Unknown'} (${unitName})`,
@@ -511,37 +425,101 @@
             borderColor: colors[idx % colors.length],
             backgroundColor: colors[idx % colors.length] + '66',
             spanGaps: true,
+            yAxisID: axisMap[unitId] || "y1"
         };
     });
 
-    // 차트 업데이트
+    // 기준값 선 시리즈 추가
+    sensorIds.forEach((id, idx) => {
+        const sensor = sensors.find(s => s.sensorId === id);
+        const unitId = sensor?.unitId;
+        const unitName = unitMapLocal[unitId] || "단위없음";
+        const refValue = referenceValueMap[id];
+        if (refValue === undefined) return;
+
+        const refData = timestamps.map(() => refValue);
+
+        datasets.push({
+            label: `${sensor?.name || 'Unknown'} 기준값 (${unitName})`,
+            data: refData,
+            borderColor: colors[idx % colors.length],
+            borderDash: [10,5],
+            fill: false,
+            pointRadius: 0,
+            yAxisID: axisMap[unitId] || "y1",
+            // tooltip에서 값 표시 방지 가능
+            // skipNull: true,
+        });
+    });
+
     const ctx = document.getElementById("myAreaChart").getContext("2d");
     if (myChart) myChart.destroy();
 
     myChart = new Chart(ctx, {
-        type: 'line',
+        type: "line",
         data: {
             labels: timestamps,
-            datasets: datasets,
+            datasets: datasets
         },
         options: {
             responsive: true,
             plugins: {
-                legend: { position: 'top' },
-                tooltip: { mode: 'index', intersect: false }
+                legend: { position: "top" },
+                tooltip: { mode: "index", intersect: false }
             },
             interaction: {
-                mode: 'nearest',
-                axis: 'x',
-                intersect: false,
+                mode: "nearest",
+                axis: "x",
+                intersect: false
             },
             scales: {
-                x: { display: true, title: { display: true, text: '시간' } },
-                y: { display: true, title: { display: true, text: '값' } },
+                x: {
+                    display: true,
+                    title: { display: true, text: "시간" }
+                },
+                y1: {
+                    type: "linear",
+                    display: true,
+                    position: "left",
+                    title: { display: true, text: unitMapLocal[unitIds[0]] || "값" },
+                    min: Math.min(...datasets.flatMap(ds => ds.yAxisID === "y1" ? ds.data.filter(d => d != null) : [])) * 0.9,
+                    max: Math.max(...datasets.flatMap(ds => ds.yAxisID === "y1" ? ds.data.filter(d => d != null) : [])) * 1.1,
+                },
+                y2: unitIds.length > 1 ? {
+                    type: "linear",
+                    display: true,
+                    position: "right",
+                    title: { display: true, text: unitMapLocal[unitIds[1]] || "값" },
+                    grid: { drawOnChartArea: false },
+                    min: Math.min(...datasets.flatMap(ds => ds.yAxisID === "y2" ? ds.data.filter(d => d != null) : [])) * 0.9,
+                    max: Math.max(...datasets.flatMap(ds => ds.yAxisID === "y2" ? ds.data.filter(d => d != null) : [])) * 1.1,
+                } : undefined
             }
         }
     });
 }
+
+    // 12. 기간 버튼 설정
+    function setRange(range) {
+        const end = new Date();
+        const start = new Date();
+
+        switch (range) {
+            case "daily": break;
+            case "week": start.setDate(end.getDate() - 7); break;
+            case "month": start.setMonth(end.getMonth() - 1); break;
+            case "year": start.setFullYear(end.getFullYear() - 1); break;
+            default: return;
+        }
+
+        document.getElementById("startDate").value = start.toISOString().slice(0, 10);
+        document.getElementById("endDate").value = end.toISOString().slice(0, 10);
+    }
+
+    // 13. 사용자 정의 기간 적용
+    function setCustomRange() {
+        onLoadChartClick();
+    }
 </script>
 </body>
 </html>
